--- a/.github/workflows/host_system_builder.yml
+++ b/.github/workflows/host_system_builder.yml
@@ -24,8 +24,8 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.9.x'
-    - run: python3 -m pip install -r requirements.txt
-    - run: python3 -m pytest test/run_tests.py
+    - run: python -m pip install -r requirements.txt
+    - run: python -m pytest test/run_tests.py
 
   ubuntu_linux:
     runs-on: ubuntu-latest
