--- a/.github/workflows/host_system_builder.yml
+++ b/.github/workflows/host_system_builder.yml
@@ -27,6 +27,15 @@ jobs:
     - run: python -m pip install -r requirements.txt
     - run: python -m pytest test/run_tests.py
 
+  chrome_book:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: nanasess/setup-chromedriver@v1.0.5
+    - uses: actions/setup-python@v1
+    - run: chromedriver --url-base=/wd/hub &
+    - run: python3 -m pytest test/run_tests.py
+
   ubuntu_linux:
     runs-on: ubuntu-latest
     container:
