--- a/.github/workflows/host_system_builder.yml
+++ b/.github/workflows/host_system_builder.yml
@@ -10,7 +10,7 @@ jobs:
   macos:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2.3.2
+    - uses: actions/checkout@v2
     - uses: actions/setup-python@v2.2.1
       with:
         python-version: '3.9.x'
@@ -20,8 +20,8 @@ jobs:
   windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-python@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2.2.1
       with:
         python-version: '3.9.x'
     - run: python -m pip install -r requirements.txt
@@ -32,7 +32,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: nanasess/setup-chromedriver@v1.0.5
-    - uses: actions/setup-python@v1
+    - uses: actions/setup-python@v2.2.1
+      with:
+        python-version: '3.9.x'
     - run: chromedriver --url-base=/wd/hub &
     - run: python3 -m pytest test/run_tests.py
 
