--- a/.github/workflows/host_system_builder.yml
+++ b/.github/workflows/host_system_builder.yml
@@ -36,6 +36,7 @@ jobs:
       with:
         python-version: '3.9.x'
     - run: chromedriver --url-base=/wd/hub &
+    - run: python3 -m pip install pytest
     - run: python3 -m pytest test/run_tests.py
 
   ubuntu_linux:
